<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p9n</name>
  <version>1.1.2</version>
  <description>HarvestX PlayStation Interface Packages.</description>
  <maintainer email="40206149+m12watanabe1a@users.noreply.github.com">m12watanabe1a</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>p9n_bringup</depend>
  <depend>p9n_example</depend>
  <depend>p9n_interface</depend>
  <depend>p9n_node</depend>
  <depend>p9n_test</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>