<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p9n_bringup</name>
  <version>1.1.1</version>
  <description>PlayStation Interface Node Launch Files.</description>
  <maintainer email="40206149+m12watanabe1a@users.noreply.github.com">m12watanabe1a</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>joy</exec_depend>
  <exec_depend>p9n_node</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>